# vrs

./: .gitignore  CMakeLists.txt  README.md  clean.sh  compile.sh  run.sh
src/: Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Events.hpp  LightEntity.cpp  LightEntity.hpp  MeshEntity.cpp  MeshEntity.hpp  Observer.hpp  RenderSystem.cpp  RenderSystem.hpp  ResourceManager.cpp  ResourceManager.hpp  ServiceManager.cpp  ServiceManager.hpp  Subject.cpp  main.cpp
src/Commands/: Command.hpp  CreateCommand.cpp  CreateCommand.hpp  DeleteCommand.hpp  TranslateCommand.cpp  TranslateCommand.hpp  UpdateCommand.hpp
src/EntitySystem/: Component.hpp  Entity.hpp  EntitySystem.cpp  EntitySystem.hpp  IEntitySystem.hpp  LightEntity.cpp  LightEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp
src/InputSystem/: BaseListener.cpp  BaseListener.hpp  IInputSystem.hpp  InputSystem.cpp  InputSystem.hpp
src/InputSystem/Components/: KeyboardComponent.cpp  KeyboardComponent.hpp  MouseComponent.cpp  MouseComponent.hpp
src/RenderSystem/: BaseListener.cpp  BaseListener.hpp  IRenderSystem.hpp  InputManager.cpp  InputManager.hpp  RenderSystem.cpp  RenderSystem.hpp  ResourceManager.cpp  ResourceManager.hpp
src/RenderSystem/Components/: CameraComponent.cpp  CameraComponent.hpp  LightComponent.cpp  LightComponent.hpp
src/UnusedClasses/: DotSceneLoader.cpp  DotSceneLoader.hpp  Observer.hpp  Subject.cpp  Subject.hpp
src/UnusedClasses/Commands/: Command.hpp  CreateCommand.hpp  DeleteCommand.cpp  DeleteCommand.hpp  TranslateCommand.cpp  TranslateCommand.hpp  UpdateCommand.hpp
